# doc-genie

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
src/doc_genie/: __init__.py  cli.py  config.py  converter.py  document.py  file_state.py  media.py  state.py  sync_engine.py
src/doc_genie/quip_api/: __init__.py
